@startuml

title __VIEW's Class Diagram__\n

  namespace View {
    class View.AdministratorView {
        - addEntryButton : JButton
        - dataTable : JTable
        - dataTablePane : JScrollPane
        - deleteEntryButton : JButton
        - rootPanel : JPanel
        - tablePanel : JPanel
        - updateEntryButton : JButton
        - updateTable : JTable
        - updateTablePane : JScrollPane
        - viewCoordinatorsButton : JButton
        - viewPostmansButton : JButton
        + AdministratorView()
        + getDataTable()
        + getDataTablePane()
        + getUpdateEntryButton()
        + getUpdateEntryButtonText()
        + getUpdateTable()
        + getUpdateTablePane()
        + getViewCoordinatorsButton()
        + getViewPostmansButton()
        + setDataTable()
        + setUpdateEntryButtonText()
        + setUpdateTable()
        - createUIComponents()
    }
  }
  

  namespace View {
    class View.CoordinatorView {
        - addParcelButton : JButton
        - dataTable : JTable
        - dataTablePane : JScrollPane
        - deleteParcelButton : JButton
        - mapPane : JPanel
        - parcelIDTextField : JTextField
        - postmansTable : JTable
        - postmansTablePane : JScrollPane
        - reportTypeComboBox : JComboBox
        - rootPanel : JPanel
        - saveReportButton : JButton
        - searchParcelByIDButton : JButton
        - tabbedPane1 : JTabbedPane
        - tabbedPane2 : JTabbedPane
        - updateParcelButton : JButton
        - updateTable : JTable
        - updateTablePane : JScrollPane
        - viewParcelsButton : JButton
        - viewParcelsPane : JPanel
        + CoordinatorView()
        + addContainerToMapPane()
        + getDataTable()
        + getDataTablePane()
        + getPostmansTablePane()
        + getReportTypeComboBoxText()
        + getSearchParcelByIDText()
        + getUpdateParcelButton()
        + getUpdateParcelButtonText()
        + getUpdateTable()
        + getUpdateTablePane()
        + getViewParcelsButton()
        + setDataTable()
        + setUpdateParcelButtonText()
        + setUpdateTable()
        - createUIComponents()
    }
  }
  

  namespace View {
    class View.LoginView {
        - loginButton : JButton
        - passwordField : JPasswordField
        - rootPanel : JPanel
        - topLabel : JLabel
        - usernameField : JTextField
        + LoginView()
        + getTopLabelText()
        + setTopLabelText()
    }
  }
  

  namespace View {
    class View.PostmanView {
        - dataTable : JTable
        - dataTablePane : JScrollPane
        - mapPane : JPanel
        - parcelIDTextField : JTextField
        - rootPanel : JPanel
        - searchParcelByIDButton : JButton
        - tabbedPane1 : JTabbedPane
        - viewParcelsButton : JButton
        - welcomeLabel : JLabel
        + PostmanView()
        + PostmanView()
        + addContainerToMapPane()
        + getDataTable()
        + getDataTablePane()
        + getSearchParcelByIDText()
        + setDataTable()
        # getMainTabbedPane()
    }
  }
  

  View.AdministratorView -up-|> javax.swing.JFrame
  View.CoordinatorView -up-|> javax.swing.JFrame
  View.LoginView -up-|> javax.swing.JFrame
  View.PostmanView -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
